Fix for #53 - make CATS allow CSP frame-ancestors 'none' as alternative to X-Frame-Options