@@ -1,7 +1,7 @@
 package com.endava.cats.fuzzer.headers;
 
-import com.endava.cats.fuzzer.api.Fuzzer;
 import com.endava.cats.annotations.HeaderFuzzer;
+import com.endava.cats.fuzzer.api.Fuzzer;
 import com.endava.cats.fuzzer.executor.SimpleExecutor;
 import com.endava.cats.fuzzer.executor.SimpleExecutorContext;
 import com.endava.cats.http.ResponseCodeFamily;
@@ -15,11 +15,11 @@ import io.github.ludovicianul.prettylogger.PrettyLoggerFactory;
 
 import javax.inject.Singleton;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.stream.Collectors;
 
@@ -37,8 +37,9 @@ public class CheckSecurityHeadersFuzzer implements Fuzzer {
     static {
         SECURITY_HEADERS.put("Cache-Control", Collections.singletonList(CatsHeader.builder().name("Cache-Control").value("no-store").build()));
         SECURITY_HEADERS.put("X-Content-Type-Options", Collections.singletonList(CatsHeader.builder().name("X-Content-Type-Options").value("nosniff").build()));
-        SECURITY_HEADERS.put("X-Frame-Options", Collections.singletonList(CatsHeader.builder().name("X-Frame-Options").value("DENY").build()));
-        SECURITY_HEADERS.put("X-XSS-Protection", Arrays.asList(CatsHeader.builder().name("X-XSS-Protection").value("1; mode=block").build(),
+        SECURITY_HEADERS.put("X-Frame-Options/Content-Security-Policy", List.of(CatsHeader.builder().name("X-Frame-Options").value("DENY").build(),
+                CatsHeader.builder().name("Content-Security-Policy").value("frame-ancestors 'none'").build()));
+        SECURITY_HEADERS.put("X-XSS-Protection", List.of(CatsHeader.builder().name("X-XSS-Protection").value("1; mode=block").build(),
                 CatsHeader.builder().name("X-XSS-Protection").value("0").build()));
 
         SECURITY_HEADERS_AS_STRING = new HashSet<>(SECURITY_HEADERS.keySet()).toString();
@@ -69,9 +70,10 @@ public class CheckSecurityHeadersFuzzer implements Fuzzer {
     }
 
     private void checkResponse(CatsResponse response, FuzzingData data) {
-        List<CatsHeader> missingSecurityHeaders = getMissingSecurityHeaders(response);
+        List<CatsHeader> missingSecurityHeaders = this.getMissingSecurityHeaders(response);
         if (!missingSecurityHeaders.isEmpty()) {
-            testCaseListener.reportResultError(log, data, "Missing recommended security headers", "Missing recommended Security Headers: {}", missingSecurityHeaders.stream().map(CatsHeader::nameAndValue).collect(Collectors.toSet()));
+            testCaseListener.reportResultError(log, data, "Missing recommended security headers",
+                    "Missing recommended Security Headers: {}", missingSecurityHeaders.stream().map(CatsHeader::nameAndValue).collect(Collectors.toSet()));
         } else {
             testCaseListener.reportResult(log, data, response, ResponseCodeFamily.TWOXX);
         }
@@ -81,14 +83,20 @@ public class CheckSecurityHeadersFuzzer implements Fuzzer {
         List<CatsHeader> notMatching = new ArrayList<>();
         for (Map.Entry<String, List<CatsHeader>> securityHeaders : SECURITY_HEADERS.entrySet()) {
             boolean noneMatch = catsResponse.getHeaders().stream()
-                    .noneMatch(catsHeader -> securityHeaders.getValue().stream().anyMatch(securityHeader -> catsHeader.getKey().equalsIgnoreCase(securityHeader.getName())
-                            && catsHeader.getValue().toLowerCase().contains(securityHeader.getValue().toLowerCase())));
+                    .noneMatch(catsHeader -> securityHeaders.getValue().stream()
+                            .anyMatch(securityHeader -> this.containsAsAlphanumeric(catsHeader.getKey(), securityHeader.getName())
+                                    && this.containsAsAlphanumeric(catsHeader.getValue(), securityHeader.getValue())));
             if (noneMatch) {
                 notMatching.addAll(securityHeaders.getValue());
             }
         }
 
         return notMatching;
+    }
+
+    private boolean containsAsAlphanumeric(String string1, String string2) {
+        return string1.replaceAll("[^a-zA-Z0-9]", "").toLowerCase(Locale.ROOT)
+                .contains(string2.replaceAll("[^a-zA-Z0-9]", "").toLowerCase(Locale.ROOT));
     }
 
     @Override
